Fix light flicker on darkmode from Origin

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -1,6 +1,6 @@
 /* dark.css */ 
 --font-color: #eee;
---bg-color: #212121;
+--bg-color: #29292b;
 
 --link-color:#599ada;
 --link-state-color:#ff5858;
